Move weather place to env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,4 +30,6 @@ services:
       - MQTT_TOPIC=${MQTT_TOPIC}
       - OPEN_WEATHER_MAP_API_KEY=${OPEN_WEATHER_MAP_API_KEY}
       - MIN_AVERAGE_DAILY_TEMPERATURE_IN_CELSIUS=${MIN_AVERAGE_DAILY_TEMPERATURE_IN_CELSIUS}
+      - WEATHER_PLACE_LAT=${WEATHER_PLACE_LAT}
+      - WEATHER_PLACE_LON=${WEATHER_PLACE_LON}
 
