Add weather stat topic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,9 @@ services:
       - MQTT_PORT=${MQTT_PORT}
       - MQTT_USER=${MQTT_USER}
       - MQTT_PASSWORD=${MQTT_PASSWORD}
-      - MQTT_TOPIC=${MQTT_TOPIC}
+      - MQTT_VALVE_TOPIC=${MQTT_VALVE_TOPIC}
+      - MQTT_WEATHER_STATUS_TOPIC=${MQTT_WEATHER_STATUS_TOPIC}
+      - MQTT_WEATHER_RESULT_TOPIC=${MQTT_WEATHER_RESULT_TOPIC}
       - OPEN_WEATHER_MAP_API_KEY=${OPEN_WEATHER_MAP_API_KEY}
       - MIN_AVERAGE_DAILY_TEMPERATURE_IN_CELSIUS=${MIN_AVERAGE_DAILY_TEMPERATURE_IN_CELSIUS}
       - WEATHER_PLACE_LAT=${WEATHER_PLACE_LAT}
