Added timezone to open and close valve cron

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,4 +34,5 @@ services:
       - MIN_AVERAGE_DAILY_TEMPERATURE_IN_CELSIUS=${MIN_AVERAGE_DAILY_TEMPERATURE_IN_CELSIUS}
       - WEATHER_PLACE_LAT=${WEATHER_PLACE_LAT}
       - WEATHER_PLACE_LON=${WEATHER_PLACE_LON}
+      - TIMEZONE=${TIMEZONE}
 
